--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -146,8 +146,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -176,8 +175,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -206,8 +204,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion"> 
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -236,8 +233,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -266,8 +262,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -296,8 +291,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -326,8 +320,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -356,8 +349,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -386,8 +378,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -416,8 +407,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion"> 
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -446,8 +436,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -476,8 +465,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -506,8 +494,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -536,8 +523,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -566,8 +552,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -596,8 +581,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -626,8 +610,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8">
-                                                {{proyecto.descripcion}}
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -686,7 +669,7 @@
                     Somos una empresa constructora, capaces de enfrentar nuevos retos de nuestros clientes.
                 </p>
                 <br>
-                <a href="#" class="btn" tabindex="0">Conócenos</a>
+                <a [routerLink]="['/nosotros']" class="btn" tabindex="0">Conócenos</a>
                 <br>
             </div>
         </div>
