--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -30,7 +30,7 @@
 
 .capa-texto
 {
-  text-align: center;
+  text-align: left;
   color: #fff;
   display: table;
   position: absolute;
@@ -38,13 +38,14 @@
   left: 0;
   z-index: 3;
   width: 100%;
-  height: 320px;
+  height: 540px;
+  padding: 20px;
 }
 
 .capa-texto > div
 {
   display: table-cell;
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .capa-texto a
@@ -77,4 +78,9 @@
   width: 0;
   opacity: 0;
   padding-left: 0;
+}
+
+.draco:hover{
+  cursor: pointer;
+  background-color: rgba(255, 191, 0, 0.5);
 }
