--- a/src/app/components/proyectos/proyectos.component.css
+++ b/src/app/components/proyectos/proyectos.component.css
@@ -84,3 +84,16 @@
   cursor: pointer;
   background-color: rgba(255, 191, 0, 0.5);
 }
+
+/*PARA LA VERSION MOVIL*/
+
+@media screen and (max-width: 991px) {
+  .banner
+  {
+  
+    height: 400px;
+  }
+  .capa-texto{
+    height: 350px;
+  }
+}
