--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -10,50 +10,38 @@
                 </ul>
             </nav>
             -->
-            <div class="credits" style="margin-right: auto !important;" >
+            <div class="credits">
                 <h3 class="title">Ubícanos</h3>
-                <p class="description" style="text-align: justify !important;">
-                    Asoc San Pedro Mz D Lt 4 – Puente Piedra 
+                <p class="description">
+                    Asoc San Pedro Mz D Lt 4 – Puente Piedra
                 </p>
             </div>
-            <div class="credits ml-auto" style="margin-right: auto !important;" >
+            <div class="credits ml-auto">
                 <h3 class="title">Llámanos</h3>
-                <p class="description" style="text-align: justify !important;">
-                    Tel (01)5209603 - 986669667 
+                <p class="description">
+                    Tel (01)5209603 - 986669667
                 </p>
             </div>
-            <div cclass="credits ml-auto" style="margin-right: auto !important;" >
+            <div class="credits ml-auto">
                 <h3 class="title">Escribenos</h3>
-                <p class="description" style="text-align: justify !important;">
-                    rtrujillo@rtzsac.com 
+                <p class="description">
+                    rtrujillo@rtzsac.com
                 </p>
             </div>
             <div class="credits ml-auto">
                 <h3 class="title">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item" >
-                            <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="#" target="_blank">
-                                <i class="fa fa-twitter"></i>
-                                <p class="d-lg-none">Twitter</p>
-                            </a>
-                        </li>
-                        <li class="nav-item" >
-                            <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="#" target="_blank">
+                        <li class="nav-item">
+                            <a href="https://www.facebook.com/RTZ-Contratistas-Generales-SAC-101630754918380/" class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="#" target="_blank">
                                 <i class="fa fa-facebook-square"></i>
                                 <p class="d-lg-none">Facebook</p>
-                            </a>
-                        </li>
-                        <li class="nav-item" >
-                            <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="#" target="_blank">
-                                <i class="fa fa-instagram"></i>
-                                <p class="d-lg-none">Instagram</p>
                             </a>
                         </li>
                     </ul>
                 </h3>
             </div>
         </div>
-        <hr>
+
         <div class="row">
             <div class="credits" style="margin-right: auto !important;">
                 <span class="copyright">
