--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" style="width: 103%;">
 
     <ngb-carousel *ngIf="images">
         <ng-template ngbSlide>
@@ -133,7 +133,7 @@
 <div class="slider_report">
     <section class="variable slider claudia" style="background-color: transparent;">
         <div>
-            <div class="item1 slider_card">
+            <div class="item1 slider_card" style="min-height: 500px;">
 
                 <div class="body_card">
                     <div class="slider_text">
@@ -204,7 +204,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8" [innerHTML]="proyecto.descripcion"> 
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -407,7 +407,7 @@
                                     <div class="col-xs-6 col-lg-6">
                                         <div class="contenedorespecial">
                                             <h2>{{proyecto.titulo}}</h2>
-                                            <p class="top8" [innerHTML]="proyecto.descripcion"> 
+                                            <p class="top8" [innerHTML]="proyecto.descripcion">
                                             </p>
                                             <br>
                                             <a href="#/proyecto/{{proyecto.titulo}}" class="btn" tabindex="0">Ver proyecto</a>
@@ -684,7 +684,7 @@
     <div id="images">
         <div class="container">
             <div class="tim-title" style="text-align: center;">
-                <h3>NUESTROS CLIENTES POTENCIALES</h3>
+                <h3 style="font-weight: bold;font-family: 'Gotham-Medium', sans-serif;">NUESTROS CLIENTES POTENCIALES</h3>
             </div>
             <div class="row">
 
