--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -1,6 +1,16 @@
 .gato {
     padding-bottom: 100px;
 }
-.clau{
+
+.clau {
     padding-right: 70px;
+}
+
+
+/*PARA LA VERSION MOVIL*/
+
+@media screen and (max-width: 991px) {
+    .clau {
+        padding-right: 15px;
+    }
 }
