--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper gato">
+<div class="wrapper gato" style="width: 103%;">
     <div class="page-header section-dark" style="background-image: url('assets/img/nosotros/nosotrosbanner.png')">
         <div class="filter"></div>
         <div class="content-center">
@@ -18,13 +18,14 @@
     </div>
 
     <div class="main">
-      <app-basicelements></app-basicelements>
-      <app-navigation></app-navigation>
-         <div class="section">
+        <app-basicelements></app-basicelements>
+        <app-navigation></app-navigation>
+        <div class="section">
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <p class="description">Somos una empresa constructora y nuestra actividad gira en torno a construcciones de edificios completos y otras actividades empresariales que se ha consolidado en los rubros de construcción civil y edificación formado por socios netamente familiares, nace con el objeto de cumplir estos retos, basados en la amplia experiencia de sus profesionales en la construcción de sus proyectos a desarrollar.</p>
+                        <p class="description">Somos una empresa constructora y nuestra actividad gira en torno a construcciones de edificios completos y otras actividades empresariales que se ha consolidado en los rubros de construcción civil y edificación formado por socios
+                            netamente familiares, nace con el objeto de cumplir estos retos, basados en la amplia experiencia de sus profesionales en la construcción de sus proyectos a desarrollar.</p>
                     </div>
                 </div>
             </div>
@@ -35,14 +36,15 @@
                     <div class="col-lg-6 col-md-12 clau">
                         <h2 class="title">MISIÓN</h2><br/>
                         <p class="description" style="text-align: justify !important;">
-                            Somos una empresa dedicada a direccionar, ejecutar y gestionar de manera eficaz y transparente proyectos y prestación de servicios directos en el ámbito de la construcción, con la participación del personal capacitado y estimulado en una cultura orientada a la satisfacción de nuestros clientes, a la práctica del trabajo con responsabilidad, seguridad y al respeto de nuestro entorno natural en busca de lograr mantener un nivel competitivo.
+                            Somos una empresa dedicada a direccionar, ejecutar y gestionar de manera eficaz y transparente proyectos y prestación de servicios directos en el ámbito de la construcción, con la participación del personal capacitado y estimulado en una cultura orientada
+                            a la satisfacción de nuestros clientes, a la práctica del trabajo con responsabilidad, seguridad y al respeto de nuestro entorno natural en busca de lograr mantener un nivel competitivo.
                         </p>
                         <h2 class="title">VISIÓN</h2><br/>
                         <p class="description" style="text-align: justify !important;">
-                            Ser reconocida como la empresa del rubro de construcción más eficiente y  confiable a nivel nacional.  Tener  claramente  que  nosotros  a  diferencia  de  otras  empresas  somos  puntual  y brindamos garantía de por medio.
+                            Ser reconocida como la empresa del rubro de construcción más eficiente y confiable a nivel nacional. Tener claramente que nosotros a diferencia de otras empresas somos puntual y brindamos garantía de por medio.
                         </p>
                     </div>
-                    
+
                     <div class="col-lg-6 col-md-12">
                         <img src="./assets/img/nosotros/mision.png" style="width: 100%;" alt="">
                     </div>
@@ -53,11 +55,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        
-                    </div>          
+
+                    </div>
                 </div>
             </div>
         </div>
-       
+
     </div>
 </div>
